--- a/app/assets/stylesheets/_exhibit.scss
+++ b/app/assets/stylesheets/_exhibit.scss
@@ -414,10 +414,10 @@ body{
     }
 }
 
-#preview {
+#exhibit-images-preview {
     display: flex;
 }
-#preview2 {
+#exhibit-images-preview2 {
     display: flex;
 }
 .sell-uploads-drop {
