--- a/app/views/shared/_top_page_middle.html.haml
+++ b/app/views/shared/_top_page_middle.html.haml
@@ -28,16 +28,16 @@
               %i.fas.fa-chevron-right
               -# レディース新着アイテムブロック商品詳細への遷移先記載9/21 YS
           .block__area
-            - (1..10).each do |i|
+            - @ladies.each do |lady|
               .block__area__product
                 .block__area__product__good-pic_price_box 
-                = link_to good_path(@good) , class:"item-buy-btn" do
-                  -# = link_to purchase_path(@good) , class: "item-buy-btn" do
-                  = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
-                  .block__area__product__good-pic_price_box__price
-                    = "¥#{@good.price}"
-                %h3.block__area__product__title
-                  = @good.goods_description
+                  = link_to good_path(@good) , class:"item-buy-btn" do
+                    -# = link_to purchase_path(@good) , class: "item-buy-btn" do
+                    = image_tag lady.images.first.goods_picture.url, class: 'goods_picture_ladies'
+                    .block__area__product__good-pic_price_box__price
+                      = "¥#{lady.price}"
+                  %h3.block__area__product__title
+                    = lady.goods_name
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
@@ -47,14 +47,14 @@
                 もっと見る
               %i.fas.fa-chevron-right
           .block__area
-            - (1..10).each do |i|
+            - @mens.each do |men|
               .block__area__product
                 .block__area__product__good-pic_price_box 
-                  = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
+                  = image_tag men.images.first.goods_picture.url, class: 'goods_picture_ladies'
                   .block__area__product__good-pic_price_box__price
-                    ¥
+                    = "¥#{men.price}"
                 %h3.block__area__product__title
-                  アマガエルくん
+                  = men.goods_name
                   
       .middle__main__block
         .middle__main__block__item
