--- a/app/assets/stylesheets/_top_page_middle.scss
+++ b/app/assets/stylesheets/_top_page_middle.scss
@@ -150,87 +150,87 @@
     }
   }
 
-  .block__area {
-    margin: 0 auto;
-    box-sizing: border-box;
-    cursor: pointer;
-    height: 524px;
-    width: 1020px;
-    &__text {
-      color: #222;
-    }
+.block_area {
+  margin: 0 auto;
+  box-sizing: border-box;
+  cursor: pointer;
+  height: 524px;
+  width: 1020px;
+  &__text {
+    color: #222;
   }
+}
 
-  .block__area__product {
-    height: 252px;
-    width: 188px;
-    margin: 0 0 20px 10px;
-    box-sizing: border-box;
-    display: inline-block;
-    position: relative;
-    &__good-pic_price_box {
-      height: 188px;
-      width: 188px;
-      background: lightblue;
-      position: relative;
-      &__price {
-        width: 80px;
-        height: 30px;
-        border-top-right-radius: 15px;
-        border-bottom-right-radius: 15px;
-        background: rgba(0,0,0,.4);
-        color: white;
-        font-size: 17px;
-        box-sizing: border-box;
-        padding: 5px 0px 5px 10px;
-        position: absolute;
-        left: 0px;
-        bottom: 10px;
-        z-index: 1;
-      }
-    }
-    &__title {
-      width: 188px;
-      height: 64px;
-      background: white;
-      padding: 12px 12px;
-      box-sizing: border-box;
-    }
-  }
-
-
-  .exhibit_btn {
-    cursor: pointer;
-    bottom: 32px;
-    font-size: 22px;
-    height: 160px;
-    right: 32px;
-    width: 160px;
-    position: fixed;
-    text-align: center;
-    z-index: 2;
-    background-color: rgb(234, 53, 45);
-    color: rgb(255, 255, 255);
-    border-radius: 50%;
-    display: inline-block;
-    text-decoration: none;
-    &__moji {
-      margin-top: 35px;
-      font-size: 22px;
-
-    }
-    .fas.fa-camera {
-      font-size: 54px;
-        width: 60px;
-        height: 54px;
-        margin-top: 30px;
-        max-height: 100%;
-        display: block;
-        margin: 5px auto 0px;
-    }
-  }
-
-  .goods_picture_ladies {
+.block_area__product {
+  height: 252px;
+  width: 188px;
+  margin: 0 0 20px 10px;
+  box-sizing: border-box;
+  display: inline-block;
+  position: relative;
+  &__good-pic_price_box {
     height: 188px;
     width: 188px;
+    background: lightblue;
+    position: relative;
+    &__price {
+      width: 80px;
+      height: 30px;
+      border-top-right-radius: 15px;
+      border-bottom-right-radius: 15px;
+      background: rgba(0,0,0,.4);
+      color: white;
+      font-size: 17px;
+      box-sizing: border-box;
+      padding: 5px 0px 5px 10px;
+      position: absolute;
+      left: 0px;
+      bottom: 10px;
+      z-index: 1;
+    }
   }
+  &__title {
+    width: 188px;
+    height: 64px;
+    background: white;
+    padding: 12px 12px;
+    box-sizing: border-box;
+  }
+}
+
+
+.exhibit_btn {
+  cursor: pointer;
+  bottom: 32px;
+  font-size: 22px;
+  height: 160px;
+  right: 32px;
+  width: 160px;
+  position: fixed;
+  text-align: center;
+  z-index: 2;
+  background-color: rgb(234, 53, 45);
+  color: rgb(255, 255, 255);
+  border-radius: 50%;
+  display: inline-block;
+  text-decoration: none;
+  &__moji {
+    margin-top: 35px;
+    font-size: 22px;
+
+  }
+  .fas.fa-camera {
+    font-size: 54px;
+      width: 60px;
+      height: 54px;
+      margin-top: 30px;
+      max-height: 100%;
+      display: block;
+      margin: 5px auto 0px;
+  }
+}
+
+.goods_picture_ladies {
+  height: 188px;
+  width: 188px;
+}
