--- a/app/views/goods/_show_goods_all.html.haml
+++ b/app/views/goods/_show_goods_all.html.haml
@@ -1,13 +1,14 @@
-.block_area
-  -# - @images.each do |image| 
-  -# =image_tag image.image.url, class: "goods_picture_ladies"
-  - @goods.each do |good|
-    .block_area__product
-      -# -binding.pry
-      -# -image_tag good.images.first.url, class: "goods_picture_ladies"
-      -# -image_tag @good.image.first.goods_picture.url, class: "goods_picture_ladies"
-      .block_area__product__good-pic_price_box
-        .block_area__product__good-pic_price_box__price 
-          = "¥#{good.price}"
-      .block_area__product__title
-        = good.goods_name
+
+-# - @images.each do |image| 
+-# - @goods.each do |good| 
+-# =image_tag image.image.url, class: "goods_picture_ladies"
+.block_area__product
+  -# -binding.pry
+  
+  -# -image_tag @good.image.first.goods_picture.url, class: "goods_picture_ladies"
+  .block_area__product__good-pic_price_box
+    =  image_tag show_goods_all.images.first.goods_picture.url, class: "goods_picture_ladies"
+    .block_area__product__good-pic_price_box__price 
+      = show_goods_all.price
+  .block_area__product__title
+    = show_goods_all.goods_name
