--- a/app/views/cards/step5.html.haml
+++ b/app/views/cards/step5.html.haml
@@ -1,5 +1,5 @@
 .login-header-wrapper
-  = render 'shared/login-header4'
+  = render 'shared/login-header5'
 
 .signup4-wrapper
   .contents
@@ -23,7 +23,7 @@
         %span.contents__info__question ？
         %span カード裏面の番号とは？
       
-      = f.button '次に進む', class:"contents__btn" 
+      -# = f.button '次に進む', class:"contents__btn" 
       -# ページのフッター部分
   %footer.confirmation-footer
     %ul.confirmation-footer-container
