--- a/app/views/addresses/new.html.haml
+++ b/app/views/addresses/new.html.haml
@@ -1,45 +1,67 @@
-.contents
-  .contents__head
-    発送元・お届け先住所入力
-  .contents__form
-  = form_with model: @address, url: addresses_path, local: true do |f|
-    .contents__form__title1
-      = f.label 'お名前'
-      %span.contents__form__require 必須
-      = f.text_field :family_name, class: 'contents__form__input', placeholder: '例）山田'
-      = f.text_field :first_name, class: 'contents__form__input', placeholder: '例）綾'
-    .contents__form__title
-      = f.label 'お名前カナ'
-      %span.contents__form__require 必須
-      = f.text_field :family_name_kana, class: 'contents__form__input', placeholder: '例）ヤマダ'
-      = f.text_field :first_name_kana, class: 'contents__form__input', placeholder: '例）アヤ'
-    .contents__form__title
-      = f.label '郵便番号'
-      %span.contents__form__require 必須
-      = f.text_field :postalcode, class: 'contents__form__input', placeholder: '例) 123-4567', maxlength:"7"
-    .contents__form__title
-      = f.label '都道府県'
-      %span.contents__form__require 必須 
-      = f.text_field :city, class: 'contents__form__input'
-      = f.collection_select :prefecture_id, Prefecture.all, :id, :name
-      
-    .contents__form__title
-      = f.label '市町村'
-      %span.contents__form__require 必須
-      = f.text_field :building_name, maxlength: '7', placeholder: '例）横浜市緑区', class: 'contents__form__input' 
+.login-header-wrapper
 
-    .contents__form__title
-      = f.label '番地'
-      %span.contents__form__require 必須
-      = f.text_field :building_name, maxlength: '7', placeholder: '例）青山1-1-1', class: 'contents__form__input'
+  -# ログインページ用ヘッダー
+  = render 'shared/login-header3'
 
-    .contents__form__title
-      = f.label '建物'
-      %span.contents__form__require__2 任意
-      = f.text_field :building_name, maxlength: '7', placeholder: '例）柳ビル103', class: 'contents__form__input'
+  .contents
+    .contents__head
+      発送元・お届け先住所入力
+    .contents__form
+    = form_with model: @address, url: addresses_path, local: true do |f|
+      .contents__form__title1
+        = f.label 'お名前'
+        %span.contents__form__require 必須
+        = f.text_field :family_name, class: 'contents__form__input', placeholder: '例）山田'
+        = f.text_field :first_name, class: 'contents__form__input', placeholder: '例）綾'
+      .contents__form__title
+        = f.label 'お名前カナ'
+        %span.contents__form__require 必須
+        = f.text_field :family_name_kana, class: 'contents__form__input', placeholder: '例）ヤマダ'
+        = f.text_field :first_name_kana, class: 'contents__form__input', placeholder: '例）アヤ'
+      .contents__form__title
+        = f.label '郵便番号'
+        %span.contents__form__require 必須
+        = f.text_field :postalcode, class: 'contents__form__input', placeholder: '例) 123-4567', maxlength:"7"
+      .contents__form__title
+        = f.label '都道府県'
+        %span.contents__form__require 必須 
+        -# = f.text_field :city, class: 'contents__form__input'
+        = f.collection_select :city, Prefecture.all, :id, :name, {prompt: '---'}, {class: 'contents__form__input'}
+        
+      .contents__form__title
+        = f.label '市町村'
+        %span.contents__form__require 必須
+        = f.text_field :building_name, maxlength: '7', placeholder: '例）横浜市緑区', class: 'contents__form__input' 
 
-    .contents__form__title
-      = f.label '電話'
-      %span.contents__form__require__2 任意
-      = f.text_field :house_number, maxlength: '14', placeholder: '例）09012345678', class: 'contents__form__input'
-      = f.submit '次に進む', class: 'contents__form__btn'
+      .contents__form__title
+        = f.label '番地'
+        %span.contents__form__require 必須
+        = f.text_field :building_name, maxlength: '7', placeholder: '例）青山1-1-1', class: 'contents__form__input'
+
+      .contents__form__title
+        = f.label '建物'
+        %span.contents__form__require__2 任意
+        = f.text_field :building_name, maxlength: '7', placeholder: '例）柳ビル103', class: 'contents__form__input'
+
+      .contents__form__title
+        = f.label '電話'
+        %span.contents__form__require__2 任意
+        = f.text_field :house_number, maxlength: '14', placeholder: '例）09012345678', class: 'contents__form__input'
+        = f.submit '次に進む', class: 'contents__form__btn'
+  
+  %footer.confirmation-footer
+    %ul.confirmation-footer-container
+      %li.confirmation-footer-container__list
+        =link_to '#', class: 'confirmation-footer-container__list__info' do
+          プライバシーポリシー
+      %li.confirmation-footer-container__list
+        =link_to '#', class: 'confirmation-footer-container__list__info' do
+          メルカリ利用規約
+      %li.confirmation-footer-container__list
+        =link_to '#', class: 'confirmation-footer-container__list__info' do
+          特定商取引に関する表記
+
+      = image_tag '/mercari-logo-gray.svg', size: "", alt: "mercari-logo-gray" , class: 'confirmation-footer-container__image'
+
+    .confirmation-footer-container__footer-text
+      ©︎2019 Mercari
