--- a/app/views/signup/step2.html.haml
+++ b/app/views/signup/step2.html.haml
@@ -1,8 +1,8 @@
 -# 他cssとの干渉をさけるため、全体をラップする
 .login-header-wrapper
 
-  -# ログインページ用ヘッダー
-  = render 'shared/login-header'
+  ログインページ用ヘッダー
+  = render 'shared/login-header2'
 
   -# 電話番号の入力部分
   .main
@@ -23,19 +23,19 @@
             %i.fas.fa-chevron-right
       
     -# ページのフッター部分
-    %footer.confirmation-footer
-      %ul.confirmation-footer-container
-        %li.confirmation-footer-container__list
-          =link_to '#', class: 'confirmation-footer-container__list__info' do
-            プライバシーポリシー
-        %li.confirmation-footer-container__list
-          =link_to '#', class: 'confirmation-footer-container__list__info' do
-            メルカリ利用規約
-        %li.confirmation-footer-container__list
-          =link_to '#', class: 'confirmation-footer-container__list__info' do
-            特定商取引に関する表記
+  %footer.confirmation-footer
+    %ul.confirmation-footer-container
+      %li.confirmation-footer-container__list
+        =link_to '#', class: 'confirmation-footer-container__list__info' do
+          プライバシーポリシー
+      %li.confirmation-footer-container__list
+        =link_to '#', class: 'confirmation-footer-container__list__info' do
+          メルカリ利用規約
+      %li.confirmation-footer-container__list
+        =link_to '#', class: 'confirmation-footer-container__list__info' do
+          特定商取引に関する表記
 
-        = image_tag '/mercari-logo-gray.svg', size: "", alt: "mercari-logo-gray" , class: 'confirmation-footer-container__image'
+      = image_tag '/mercari-logo-gray.svg', size: "", alt: "mercari-logo-gray" , class: 'confirmation-footer-container__image'
 
-      .confirmation-footer-container__footer-text
-        ©︎2019 Mercari
+    .confirmation-footer-container__footer-text
+      ©︎2019 Mercari
