--- a/app/views/addresses/new.html.haml
+++ b/app/views/addresses/new.html.haml
@@ -47,7 +47,7 @@
         = f.label '電話'
         %span.contents__form__require__2 任意
         = f.text_field :house_number, maxlength: '14', placeholder: '例）09012345678', class: 'contents__form__input'
-        = f.submit '次に進む', class: 'contents__form__btn'
+        = f.submit '次に進む', class: 'contents__btn'
   
   %footer.confirmation-footer
     %ul.confirmation-footer-container
