--- a/app/assets/stylesheets/_exhibit.scss
+++ b/app/assets/stylesheets/_exhibit.scss
@@ -29,9 +29,9 @@ body{
 .main-contents {
     position: relative;
     width: 100%;
-    height:100%;
+    height: auto;
+    overflow: hidden;
     .contents-box{
-        height: 100%;
         width: 700px;
         margin: 0 auto;
         background: #fff;
@@ -45,10 +45,13 @@ body{
         }
         // 画像アップロード部分
         &__form-list{
-            height: 100%;
+            height: auto;
+            overflow: hidden;
             width: 700px;
             &__upload-box{
-                padding: 40px 40px 20px 40px;
+                padding: 40px 40px 40px 40px;
+                height: auto;
+                overflow: hidden;
                 &__image-text{
                     height: 30px;
                     width:  70px;
@@ -108,6 +111,7 @@ body{
         }
         // 商品名、商品説明部分
         &__descript-section{
+            border-top: 1px solid #eee;
             background: #fff;
             padding: 40px;
             &__item-name{
@@ -176,7 +180,8 @@ body{
         &__category-section{
             border-top: 1px solid #eee;
             background: #fff;
-            height: calc(100% - 130px);
+            height: auto;
+            overflow: hidden;
             padding-right: 40px;
             padding-left: 40px;
             &__sub-head{
@@ -192,6 +197,7 @@ body{
             &__category-box{
                 float: right;
                 width: 400px;
+                margin-bottom: 40px;
                 &__tag{
                     margin-top: 40px;
                     width: 140px;
@@ -252,7 +258,8 @@ body{
         &__price-section{
             float: right;
             margin-top: 50px;
-            height: 200px;
+            height: auto;
+            overflow: hidden;
             width: 400px;
             position: relative;
             &__price-box-left{
@@ -316,6 +323,12 @@ body{
                 padding: 15px 0 20px 0;
                 font-size: 13px;
             }
+            &__result {
+                height: auto;
+                overflow: hidden;
+                width: 400px;
+
+            }
             &__result-left{
                 margin-top: 30px;
                 font-size: 16px;
@@ -369,12 +382,9 @@ body{
     }
 }
 
-#delivery{
-    height: calc(100% - 250px);
-}
 
 #exhibit-selling-price{
-    height: calc(100% - 300px);
+    height: 300px;
 }
 
 
@@ -414,6 +424,26 @@ body{
     }
 }
 
+.dropzone-container {
+    display: flex;
+    height: 160px;
+    width: 610px;
+    background: #f5f5f5;
+    border: 1px dashed #ccc;
+
+}
+
+.dropzone-area {
+    height: 160px;
+    width: auto;
+    overflow: hidden;
+}
+
+.upload-image {
+    height: 160px;
+    width: 600px;
+}
+
 #exhibit-images-preview {
     display: flex;
 }
@@ -421,8 +451,28 @@ body{
     display: flex;
 }
 .sell-uploads-drop {
-    float: left;
+    padding: 5px;
 }
-.sell-uploads-area {
+.sell_upload__area {
     display: flex;
+    height: 180px;
+}
+
+.img_view {
+    padding: 5px;
+}
+
+.xxxxxbtn {
+    display: inline;
+}
+
+.xxxxxbtn.delete{
+    float: right;
+    margin-right: 10px;
+    color: deepskyblue;
+}
+
+.xxxxxbtn.edit{
+    margin-left: 10px;
+    color: deepskyblue;
 }
