--- a/app/views/shared/_exhibit.html.haml
+++ b/app/views/shared/_exhibit.html.haml
@@ -18,7 +18,7 @@
           必須
         .capture 
           最大10枚までアップロードできます
-        = f.fields_for :images, @images do |i|#:goods_picture, class:'contents-box__form-list__drop-box__item__upload-file' do |i|
+        = f.fields_for :images, @images do |i|
           .dropzone-container.clearfix
             .sell-uploads-drop
               #exhibit-images-preview
@@ -26,7 +26,6 @@
               = i.label :image, for: 'upload-image' do
                 .sell_upload__area
                   = i.file_field :goods_picture, multiple: true, name: 'images[goods_picture][]', id: 'upload-image', class: 'upload-image', 'data-image': 0, style: 'opacity: 0'
-      //.contents-box__form-list__space
 
       -# 商品名、商品説明入力部分
       %section.contents-box__descript-section
@@ -43,7 +42,6 @@
           .form-require
             必須
         = f.text_area :goods_description, class:'contents-box__descript-section__descript-form',placeholder: '商品の説明(必須1,000文字以内)(色、素材、重さ、定価、注意点等)例)2010年頃に１万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。'
-      -# .contents-box__descript-section__space
 
       -# 商品の詳細、カテゴリ選択部分
       %section.contents-box__category-section
