--- a/app/assets/stylesheets/_signup4.scss
+++ b/app/assets/stylesheets/_signup4.scss
@@ -41,8 +41,8 @@
       &__cardlist{
         margin-top: 10px;
         margin-left: 10px;
-        text-align: left;
-        &__icon{
+        text-align: center;
+        .icon{
           display: inline-block;
         }
       }
