--- a/app/views/shared/_profile-sidebar.html.haml
+++ b/app/views/shared/_profile-sidebar.html.haml
@@ -96,6 +96,8 @@
           電話番号の確認
           %i.fas.fa-chevron-right
       %li
-        %a{href: tests_logout_path, class: 'mypage-nav__list__item'}
+        =link_to destroy_user_session_path, method: :delete, class: 'mypage-nav__list__item' do
           ログアウト
-          %i.fas.fa-chevron-right
+        -# %a{href: tests_logout_path, class: 'mypage-nav__list__item'}
+        -#   ログアウト
+        -#   %i.fas.fa-chevron-right
