--- a/app/assets/stylesheets/_products.scss
+++ b/app/assets/stylesheets/_products.scss
@@ -111,6 +111,7 @@
       color: white;
       text-align: center;
       line-height: 60px;
+      text-decoration: none;
     }
     .item-description {
       padding: 32px 0 0;
