--- a/app/views/shared/_good_delete.html.haml
+++ b/app/views/shared/_good_delete.html.haml
@@ -110,6 +110,20 @@
         .good_option_box__delete
         -# jsで取得しアラートを上部に表示させる
           この商品を削除する
+      %aside.
+        .banner
+          .body
+            .head
+              確認
+            %br
+              削除すると二度と復活できません。
+            %br
+              削除する代わりに停止することもできます。
+            %br
+              本当に削除しますか？
+            .option_box
+              .n_cancel
+              .y_delete
 
           
 
