--- a/app/views/shared/_good_delete.html.haml
+++ b/app/views/shared/_good_delete.html.haml
@@ -123,7 +123,11 @@
               本当に削除しますか？
             .option_box
               .n_cancel
+                =link_to "#" do
+                キャンセル
               .y_delete
+                =link_to "#" do
+                削除する
 
           
 
