--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,4 +32,5 @@
 @import 'purchased_on_deal';
 @import 'tag-master';
 @import 'purchase_completed';
-@import 'category_tree'
+@import 'category_tree';
+@import 'mypage_mypage';
