--- a/app/views/shared/_profile-sidebar.html.haml
+++ b/app/views/shared/_profile-sidebar.html.haml
@@ -2,7 +2,7 @@
   %nav.mypage-nav
     %ul.mypage-nav__list
       %li
-        %a{href: '#', class: 'mypage-nav__list__item active'} 
+        %a{href: tests_mypage_path, class: 'mypage-nav__list__item active'} 
           マイページ
           %i.fas.fa-chevron-right
       %li
