--- a/app/views/signup/step2.html.haml
+++ b/app/views/signup/step2.html.haml
@@ -1,7 +1,7 @@
 -# 他cssとの干渉をさけるため、全体をラップする
 .login-header-wrapper
 
-  ログインページ用ヘッダー
+  -# ログインページ用ヘッダー
   = render 'shared/login-header2'
 
   -# 電話番号の入力部分
