fix submit btn scss

--- a/app/assets/stylesheets/_signup2.scss
+++ b/app/assets/stylesheets/_signup2.scss
@@ -124,3 +124,14 @@
   margin-top: 5px;
   margin-left: 5px;
 }
+
+
+.step2-submit-red-btn {
+  background-color: #ea352d;
+  color: #fff;
+  margin: 24px 0 0;
+  display: block;
+  width: 100%;
+  line-height: 40px;
+  font-size: 14px;
+}
