--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -27,7 +27,14 @@
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/discover.svg?2482339763', height: "15", width: "21"
             
         .contents__form__title
-          %span.contents__form__require 必須
+          .credit-register-container__right__deadline
+            %label 有効期限
+            %span.contents__form__require 必須
+            .credit-register-container__right__deadline__list{ style:"display:inline-flex"}
+              = f.select :month, Test.months.keys.to_a, {} ,class: "credit-register-container__right__deadline__list__month"
+              %span 月
+              = f.select :year, Test.years.keys.to_a, {} ,class: "credit-register-container__right__deadline__list__year"
+              %sapn 年
 
         .contents__form__title
           %label セキュリティコード
@@ -54,3 +61,6 @@
 
     .confirmation-footer-container__footer-text
       ©︎2019 Mercari
+
+
+
