--- a/app/assets/stylesheets/_devise.scss
+++ b/app/assets/stylesheets/_devise.scss
@@ -76,8 +76,8 @@
       }
       .user-login-form {
         width: 456px;
-        margin: 0 auto;
         background-color: #fff;
+        margin: 0 auto;
         .form-inner {
           padding: 24px 64px 32px;
           &__mail {
@@ -103,6 +103,25 @@
               border: 1px solid #ccc;
               text-align: center;
               display: block;
+              .user-login-form-group{
+                .login-btn {
+                  margin: 24px 0 0;
+                  background-color: #ea352d;
+                  color: white;
+                  width: 100%;
+                  line-height: 48px;
+                  font-size: 14px;
+                  text-align: center;
+                  cursor: pointer;
+                }
+
+
+
+              }
+
+
+
+
             }
           }
           .login-btn {
