--- a/app/views/shared/_good_delete.html.haml
+++ b/app/views/shared/_good_delete.html.haml
@@ -1,130 +1,93 @@
 = render 'shared/main_page_header'
 
--# 商品詳細ページ機能追加中 YS（残り+@分ブランド、サイズ？、商品、状態、負担、方法、地域ユーザー情報、出品者の名前、）9/23
-
 .good_delete-wrapper
   .container
     = form_with url: "#", method: :post , class: 'item-box' do
       %h1.item-box__name
-        = @good.goods_name 
+        -# = @good.goods_name 
       %p.item-box__detail 
       .item-main
         .item-photo
-          -# - 以下翻訳：イメージテーブルにあるグッズidの一番最初(first)の画像(goods_picture)を呼び出す記述,クラスはその画像に対して大きさや修飾するため？に必要 9/23 YS
-          = image_tag @good.images.first.goods_picture.url, class: "photo-big"
+          -# = image_tag @good.images.first.goods_picture.url, class: "photo-big"
           .photo-smallbox
             -# 以下翻訳：イメージテーブルにあるグッズidに関わる画像(goods_picture)を何度も(each)呼び出してきている 9/23 YS
-            - @good.images.each do |image|
+            -# - @good.images.each do |image|
               = image_tag image.goods_picture.url, class: "photo-small-item"
         %table.item-detail
           %tr
             %th.category 出品者
             %td
               = link_to "#",  class:"name" do
-                = @user.username 
+                -# = @user.username 
                 -# 名前userDB待ち（仮）
-              .user-rating
-                .item-user-ratings
-                  %i.fas.fa-laugh 
-                    %span.text 3
-                .item-user-ratings
-                  %i.fas.fa-meh
-                    %span.text 0
-                .item-user-ratings
-                  %i.fas.fa-frown
-                    %span.text 0
               -# 以下翻訳：超テクニック！！40行目にある.parentを入れるだけでアンせストリーで作った上のカテゴリーを引っ張ってこれる！！9/25YS
             %tr
               %th.category カテゴリー
               %td
                 .item-detail-table-sub-category
                   = link_to "#",  class:"name" do
-                    = @good.category.parent.parent.category_name
+                    -# = @good.category.parent.parent.category_name
                 %i.fa.fa-chevron-right.items-link_to
                   = link_to "#",  class:"name" do
-                    = @good.category.parent.category_name
+                    -# = @good.category.parent.category_name
                 .item-detail-table-sub-sub-category
                 %i.fa.fa-chevron-right.items-link_to
                   = link_to "#",  class:"name" do
-                    = @good.category.category_name
+                    -# = @good.category.category_name
             %tr
               %th.category ブランド
               %td
                 = link_to "#",  class:"name" do
-                  = @good.brand.name
+                  -# = @good.brand.name
 
             %tr
               %th.category 商品のサイズ
               %td 
-                = @good.size
+                -# = @good.size
               
             %tr
               %th.category 商品の状態
               %td 
-                = @good.condition.name
+                -# = @good.condition.name
               
             %tr
               %th.category 配送料の負担
               %td 
-                = @good.delivery.parent.delivery_method
+                -# = @good.delivery.parent.delivery_method
             %tr
               %th.category 配送の方法
               %td 
-                = @good.delivery.delivery_method
+                -# = @good.delivery.delivery_method
               
             %tr
               %th.category 発送元地域
               %td
-                = link_to @good.prefecture.name
+                -# = link_to @good.prefecture.name
               
             %tr
               %th.category 発送日の目安
 
               %td 
-                = @good.shipment.name
+                -# = @good.shipment.name
+
+
+              
+
 
       .price-box
         %span.price-box__price
-          = number_to_currency(@good.price, unit: "￥", precision: 0)
+          -# = number_to_currency(@good.price, unit: "￥", precision: 0)
         %span.price-box__tax
           (税込)
         %span.price-box__fee
           送料込み
         -# 以下翻訳：次の遷移先を(purchase_path(@good))グッズidを所得して遷移する。
 
+      -# = link_to purchase_path(@good) , class: "item-buy-btn" do
+        購入画面に進む
       .item-description
         %p.item-description__inner
-          = @good.goods_description   #グッズテーブルの商品詳細カラムより引数
-        
-      .good_option_box
-        .good_option_box__edit
-          商品の編集
-        .good_option_box__or
-          or
-        .good_option_box__pause
-          出品を一旦停止する
-        .good_option_box__delete
-        -# jsで取得しアラートを上部に表示させる
-          この商品を削除する
-      %aside.
-        .banner
-          .body
-            .head
-              確認
-            %br
-              削除すると二度と復活できません。
-            %br
-              削除する代わりに停止することもできます。
-            %br
-              本当に削除しますか？
-            .option_box
-              .n_cancel
-                =link_to "#" do
-                キャンセル
-              .y_delete
-                =link_to "#" do
-                削除する
-
+          -# = @good.goods_description   
           
 
 
