--- a/app/assets/stylesheets/_good_delete.scss
+++ b/app/assets/stylesheets/_good_delete.scss
@@ -1,4 +1,4 @@
-.good_delete-wrapper {
+.product-details-wrapper{
   margin-bottom: 40px;
   .container {
     position: relative;
@@ -53,7 +53,8 @@
               font-size: 0;
               display: inline-block;
             }
-          }     
+          }
+         
         }
         .item-detail {
           float: right;
@@ -110,6 +111,7 @@
       color: white;
       text-align: center;
       line-height: 60px;
+      text-decoration: none;
     }
     .item-description {
       padding: 32px 0 0;
@@ -118,6 +120,46 @@
       &__inner {
         white-space: pre-wrap;
         
+      }
+    }
+    .button-content {
+      margin: 16px 0 0px;
+      font-weight: 400;
+      &__left {
+        float: left;
+        display: flex;
+      }
+      .button-like {
+        border-radius: 40px;
+        background: rgb(233, 229, 229); 
+        padding: 8px 16px;
+        &__text{
+          color: #333;
+          background: #e9e5e5;
+          padding: 8px 4px;
+          border-radius: 40px;
+          text-decoration: none;
+        }
+      }
+      .button-report {
+        margin: 0 0 0 16px;
+        color: #333;
+        background: rgb(233, 229, 229);
+        padding: 8px 16px;
+        border-radius: 40px;
+        &__text{
+          color: #333;
+          background: #e9e5e5;
+          padding: 8px 4px;
+          border-radius: 40px;
+          text-decoration: none;
+        }
+      }
+      &__right {
+        float: right;
+        color: #0099e8;
+        background: #f5f5f5;
+        padding: 8px 16px;
       }
     }
   }
